<resources>
    <string name="app_name">"CryptoExchange "</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="amount_hint">amount hint</string>
    <string name="convert">convert</string>
    <string name="eth_sign">ETH </string>
    <string name="btc_sign">BTC</string>

    <string name="refresh">Refresh</string>
    <string name="order">Order</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="instr1">Input amount to convert</string>
    <string name="quick_menu">Quick Menu</string>
    <string name="fast_convert">Swift Converter</string>
    <string name="about_app">About App</string>
    <string name="credits">Credits</string>
    <string name="content_desc">content_desc</string>
    <string name="cryptoexchange_v1_0_alc_2_0_assessment">CryptoExchange</string>
    <string name="an_alc_2_0_assessment_project">...an ALC 2.0 Assessment Project</string>
    <string name="cryptocompare_web_api">CryptoCompare WEB API</string>
    <string name="google_andela_team">Google / Andela Team</string>
    <string name="and_others">And Others...</string>
    <string name="contact_2348133497153">Contact: +2348133497153</string>
    <string name="email_olebueziobinna_gmail_com">Email: olebueziobinna@gmail.com</string>
    <string name="github_repo_https_github_com_obyslink">GitHub Repo: https://github.com/obyslink</string>
    <string name="version_1_0_2017">Version 1.0</string>
    <string name="an_alc_2_0_intermediate_track_challenge_app">An ALC 2.0 Intermediate Track Challenge App</string>
    <string name="Credits">Appreciation</string>
    <string name="about_us">About App</string>
    <string name="quickcon">Swift Converter</string>
    <string name="visit_repo">Repository</string>
    <string name="share">Share</string>
    <string name="repo_name">My Github Repo</string>
    <string name="offline_calculator">Offline Calculator</string>
    <string name="exchange_rates_updated">Exchange Rates Updated Successfully! Click to convert</string>
    <string name="text_share_app">Share App</string>
    <string name="title_activity_test_nav">TestNavActivity</string>

    <string name="action_settings">Settings</string>
    <string name="testnav">Test Nav</string>
    <string name="title_activity_fast_calculator_nav">FastCalculatorNavActivity</string>
    <string name="select_an_option">Select an option</string>
    <string name="click_to_convert">Click To Convert</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="exchange_rates">Exchange Rates</string>
    <string name="version">Version</string>
    <string name="version_code">1.1</string>
    <string name="v">v</string>
    <string name="no_internet">no internet connection available</string>

    <string name="dialog_no_internet">No Internet</string>
    <string name="dialog_no_gps">No GPS</string>
    <string name="dialog_no_location_service">Please turn on location service from settings, must press on/off toggle and agree to access location and restart an app.\nNote:if you have already done choices with disagree and dont show dialog again then location dialog not show when you press on/off toggle button.to solve this problem you must clear all setting preferences.</string>
    <string name="dialog_no_location_service_title">Locaton service is off.</string>
    <string name="dialog_no_inter_message">You have not active internet connection.</string>
    <string name="dialog_no_gps_messgae">Seems like you have not started your location service.</string>
    <string name="dialog_enable_gps">Enable GPS</string>
    <string name="dialog_enable_location_service">Go to location service</string>
    <string name="dialog_enable_3g">Enable 3G</string>
    <string name="dialog_enable_wifi">Enable WIFI</string>
    <string name="dialog_exit">Exit</string>
    <string name="dialog_skip">Skip</string>
    <string name="title_dummy_activity">Exchange Rates</string>

</resources>
