<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDeep">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:id="@+id/relativeLayout">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/apphead"/>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bgtopb"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/imageView5" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bgtopb"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bgtopb"
            android:layout_toStartOf="@+id/imageView5" />
    </RelativeLayout>



    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/welcome"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_2348133497153"
        android:textColor="@color/colorAccent"
        android:layout_below="@+id/textView3"
        android:layout_alignEnd="@+id/imageView7"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_olebueziobinna_gmail_com"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/textView8"
        android:layout_alignEnd="@+id/imageView7" />
    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github_repo_https_github_com_obyslink"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="55dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignEnd="@+id/imageView7" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/an_alc_2_0_assessment_project"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageView7"
        android:layout_below="@+id/relativeLayout1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_1_0_2017"
        android:layout_marginTop="21dp"
        android:layout_alignTop="@+id/relativeLayout"
        android:layout_alignEnd="@+id/textView4"
        android:layout_marginEnd="54dp" />


</RelativeLayout>