<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDeep">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:id="@+id/relativeLayout">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/apphead" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/relativeLayout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorGold"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:layout_above="@+id/imageView7">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/imageView5"
            android:src="@drawable/bgtopb" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/bgtopb" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/imageView5"
            android:src="@drawable/bgtopb" />
    </RelativeLayout>



    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/welcome"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="14dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView7"
        android:layout_below="@+id/textView1u"
        android:layout_marginBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/an_alc_2_0_assessment_project"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Version 1.0 (2017)"
        android:layout_marginTop="15dp"
        android:layout_alignTop="@+id/relativeLayout"
        android:layout_alignEnd="@+id/textView4"
        android:layout_marginEnd="27dp" />

    <TextView
        android:id="@+id/textView13u"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingRight="20dp"
        android:text="CREDITS:"
        android:textAllCaps="true"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView15u"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView16u"
        android:layout_below="@+id/textView13u"
        android:layout_marginTop="15dp"
        android:paddingRight="20dp"
        android:text="@string/cryptocompare_web_api"
        android:textAlignment="viewStart"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView1u"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/relativeLayout1"
        android:layout_below="@+id/textView16u"
        android:layout_marginTop="9dp"
        android:paddingRight="20dp"
        android:text="@string/and_others"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView16u"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView4"
        android:layout_below="@+id/textView15u"
        android:layout_marginTop="9dp"
        android:paddingRight="20dp"
        android:text="@string/google_andela_team"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />


</RelativeLayout>