<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="@color/colorDeep">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="50dp"

            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/apphead" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerVertical="true"
            android:layout_marginLeft="2dp"
            android:layout_toEndOf="@+id/imageView"
            android:fontFamily="casual"
            android:text="CRYPTOEXCHANGE"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle"
            android:textColor="@android:color/background_dark"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/bgtopb" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/bgtopb" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/imageView5"
                android:src="@drawable/bgtopb" />

        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/darker_gray"
        android:orientation="vertical"
        android:layout_alignStart="@+id/relativeLayout">

        <TextView
            android:id="@+id/full_name_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:textColor="@color/colorAccent1"
            android:textSize="18sp"
            android:background="@color/colorAccent"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/money_code_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="end"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/flat_value_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorAccent1"
                android:hint="input amount"
                android:inputType="numberDecimal"
                android:padding="8dp"
                android:selectAllOnFocus="true"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:typeface="monospace" />

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="8dp"
                card_view:cardBackgroundColor="@color/colorPrimary"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="0dp">

                <ImageButton
                    android:id="@+id/flat_convert_button"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:onClick="doConvert"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:src="@drawable/reload2"
                    android:textColor="@color/colorAccent1" />

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="end"
                android:text="@string/btc_sign"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                tools:text="BTC" />

            <EditText
                android:id="@+id/btc_value_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorAccent1"
                android:hint="input amount"
                android:inputType="numberDecimal"
                android:padding="8dp"
                android:selectAllOnFocus="true"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:typeface="monospace" />

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="8dp"
                card_view:cardBackgroundColor="@color/colorPrimary"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="0dp">

                <ImageButton
                    android:id="@+id/btc_convert_button"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:onClick="doConvert"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:src="@drawable/reload2"
                    android:textColor="@color/colorAccent1" />

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="end"
                android:text="@string/eth_sign"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                tools:text="ETH" />

            <EditText
                android:id="@+id/eth_value_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorAccent1"
                android:hint="input amount"
                android:inputType="numberDecimal"
                android:padding="8dp"
                android:selectAllOnFocus="true"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:typeface="monospace" />

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="8dp"
                card_view:cardBackgroundColor="@color/colorPrimary"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="0dp">

                <ImageButton
                    android:id="@+id/eth_convert_button"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:onClick="doConvert"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:src="@drawable/reload2"
                    android:textColor="@color/colorAccent1" />

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/instr1"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="italic" />

    <RelativeLayout
        android:id="@+id/FastCalcLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="61dp"
        android:background="@color/colorAccent1"
        android:paddingBottom="20dp"
        android:paddingTop="20dp">


        <ImageView
            android:id="@+id/imageViewG"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/xmr"
            android:layout_marginEnd="101dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <ImageView
            android:id="@+id/imageViewI"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/nvc"
            android:layout_marginEnd="51dp"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/imageViewG" />


    </RelativeLayout>

    <ImageButton
        android:id="@+id/FCBtn"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_alignEnd="@+id/FastCalcLayout"
        android:layout_alignTop="@+id/relativeLayout"
        android:layout_marginEnd="29dp"
        android:layout_marginTop="7dp"
        android:clickable="true"
        android:gravity="center"
        android:src="@drawable/calcul2"
        android:textColor="@color/colorAccent1"
        android:textSize="11sp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/via"
        android:layout_marginStart="10dp"
        android:layout_alignTop="@+id/FastCalcLayout"
        android:layout_alignStart="@+id/textView8"
        android:layout_marginTop="17dp" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/qbc"
        android:layout_alignTop="@+id/imageView6"
        android:layout_alignStart="@+id/FCBtn" />


</RelativeLayout>